Gave ke-glyph class fixed size of 16x16 to reduce layout flicker on angular refreshes

--- a/omod/src/main/resources/sass/kenyaui.scss
+++ b/omod/src/main/resources/sass/kenyaui.scss
@@ -600,6 +600,8 @@ button.ke-app {
 /* Images that appear inline with regular text */
 .ke-glyph {
 	vertical-align: text-bottom;
+	height: 16px;
+	width: 16px;
 }
 
 .ke-identifier-type {
